traefik/traefik-dashboard-ingressroute-with-auth.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.test`)
      kind: Rule
      middlewares:
      - name: auth
        namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
